* Sending messages to potential users, with a reserved user id. It seems we are already good for that with latest hooks introduced in notifications module.

6.x-1.0-rc2 to ...........
--------------------------
- Fixed minor issues with modules and documentation
- Added German translation, by rastatt, #294378
- Fixed wrong delta in filter system, by the greenman, #305593
- Fixed namespace collisions with other hooks, #301715 and #294322
 
6.x-1.0-rc1 to 6.x-1.0-rc2
----------------------------
- Some clean up, moved documentation to the handbook, http://drupal.org/node/252582
- Fixed: Condition produces false positive when rendering messages, by andremolnar, #290163
- Added unit tests for message rendering.

6.x-1.0-beta1 to 6.x-1.0-rc1
----------------------------
- Creating a default input format on install, "Messaging plain text"
- Fixed parameter inconsistency, by darren.ferguson, #272545
- Some minor bug fixes, see 5.x changelog
- Reworked administration menu options, grouping all settings under Admin/Messaging
- Porting latest minor features from Drupal 5. Send method settings, etc..
- Fixing template form not showing, by BTMash, #251372

5.x-1.0-beta1 to 6.x-1.0-dev
-----------------------------
- Fixed issue with messaging log variable
- Quick Drupal 6 upgrade and some code clean up
- Ported latest patches from 5.x branch (MESSAGE_TYPE_NONE and help text)
- Split admin UI on its own file messaging.admin.inc

5.x-1.0-alpha2 to 5.x-1.0-beta1
--------------------------------
- Added formatting, pager and delete option for messaging_simple module
- Added formatting and pager for messaging_debug(), fixed some strings
- Fixed annoying hidden char issue for messaging_sms module, http://drupal.org/node/243246
- Added helper function messaging_mail_params()
- API change for consistency with queue processing: The send callback now takes a single destination
- Added $message['sender_account'] parameter
- Added some api documentation as function comments