@@ -2,4 +2,5 @@
 name = Messaging PHPMailer
 description = Mail Sending Method: Integration with Drupal mail API for HMTL Mail
 package = "Messaging"
-dependencies = messaging
+dependencies[] = messaging
+core = 6.x
